# computer_graphics

./: .gitignore  pyproject.toml
configs/: colors.py  config.py
configs/task1/: base_config.py
configs/task2/: base_config.py
configs/task3/: base_config.py
configs/task4/: base_config.py
lab1/: config.py  matriximage.py  saving_utils.py  task1.py  task11.py  task2.py  task3.py  task3_6.py  task7.py
src/: job_1.py  task2.py  task3_6.py  task7.py
src/drawing/: figures.py  lines.py
src/jobs/: task1.py  task2.py  task3.py
src/reading/: model_reader.py
src/render/: model_renderer.py
src/schema/: __init__.py  matrix_image.py  model_3d.py  old_model_3d.py
