[tool.poetry]
name = "computer-graphics"
version = "0.1.0"
description = ""
authors = ["arkadiysotnikov <cotnikoarkady@gmail.com>"]
readme = "README.md"
packages = [{include = "computer_graphics"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pillow = "^9.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
